<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QRCodeGeneratorViewController" customModule="QRCodeSample" customModuleProvider="target">
            <connections>
                <outlet property="qrCodeButton" destination="0w0-2h-4GY" id="p5Q-0J-STG"/>
                <outlet property="qrCodeImageView" destination="7Pl-KY-Kuh" id="mX2-Kc-8at"/>
                <outlet property="saveButton" destination="lul-ci-zuP" id="b5k-Vc-Qjp"/>
                <outlet property="shareButton" destination="2Gr-LV-L35" id="j5d-3t-APl"/>
                <outlet property="valueTextField" destination="H9F-PQ-NhU" id="SRM-fu-6y6"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Pl-KY-Kuh">
                    <rect key="frame" x="71.666666666666686" y="301" width="250" height="250"/>
                    <accessibility key="accessibilityConfiguration" identifier="qrCodeImageView"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="250" id="fhe-o1-lyF"/>
                        <constraint firstAttribute="height" constant="250" id="i9u-PD-KtQ"/>
                    </constraints>
                </imageView>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="MD9-zO-JwB">
                    <rect key="frame" x="70" y="601" width="253" height="40"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleAspectFit" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lul-ci-zuP">
                            <rect key="frame" x="0.0" y="0.0" width="106.66666666666667" height="40"/>
                            <accessibility key="accessibilityConfiguration" identifier="saveButton"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="40" id="qJs-Gx-Sue"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                            <state key="normal" title="保存" image="square.and.arrow.down" catalog="system"/>
                            <buttonConfiguration key="configuration" style="gray" image="square.and.arrow.down" catalog="system" title="保存">
                                <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
                            </buttonConfiguration>
                            <connections>
                                <action selector="tapSaveButton:" destination="-1" eventType="touchUpInside" id="vpv-pr-E7E"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleAspectFit" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Gr-LV-L35">
                            <rect key="frame" x="146.66666666666666" y="0.0" width="106.33333333333334" height="40"/>
                            <accessibility key="accessibilityConfiguration" identifier="shareButton"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="40" id="xCK-TD-qBi"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                            <state key="normal" title="シェア" image="square.and.arrow.up" catalog="system"/>
                            <buttonConfiguration key="configuration" style="gray" image="square.and.arrow.up" catalog="system" title="シェア">
                                <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
                            </buttonConfiguration>
                            <connections>
                                <action selector="tapShareButton:" destination="-1" eventType="touchUpInside" id="EAx-Vw-5cy"/>
                            </connections>
                        </button>
                    </subviews>
                </stackView>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="yop-zN-kwp">
                    <rect key="frame" x="70" y="172.66666666666666" width="253" height="98.333333333333343"/>
                    <subviews>
                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H9F-PQ-NhU">
                            <rect key="frame" x="0.0" y="0.0" width="253" height="34"/>
                            <accessibility key="accessibilityConfiguration" identifier="qrCodeValueTextField"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0w0-2h-4GY">
                            <rect key="frame" x="59.666666666666657" y="64" width="134" height="34.333333333333343"/>
                            <accessibility key="accessibilityConfiguration" identifier="qrCodeButton"/>
                            <state key="normal" title="Button"/>
                            <buttonConfiguration key="configuration" style="plain" title="QRコード生成"/>
                            <connections>
                                <action selector="tapQRCodeButton:" destination="-1" eventType="touchUpInside" id="97h-wN-dKs"/>
                            </connections>
                        </button>
                    </subviews>
                    <constraints>
                        <constraint firstItem="H9F-PQ-NhU" firstAttribute="top" secondItem="yop-zN-kwp" secondAttribute="top" id="54v-e0-SZh"/>
                        <constraint firstItem="H9F-PQ-NhU" firstAttribute="leading" secondItem="yop-zN-kwp" secondAttribute="leading" id="9Ll-Xh-oYD"/>
                        <constraint firstAttribute="trailing" secondItem="H9F-PQ-NhU" secondAttribute="trailing" id="MwL-a6-Q8h"/>
                    </constraints>
                </stackView>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <accessibility key="accessibilityConfiguration" identifier="qrCodeGeneratorViewController"/>
            <constraints>
                <constraint firstItem="yop-zN-kwp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="70" id="2Et-Jq-JOw"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="yop-zN-kwp" secondAttribute="trailing" constant="70" id="8WF-gv-FIu"/>
                <constraint firstItem="MD9-zO-JwB" firstAttribute="top" secondItem="7Pl-KY-Kuh" secondAttribute="bottom" constant="50" id="BS7-XB-5B8"/>
                <constraint firstItem="7Pl-KY-Kuh" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="CAW-6H-Ziu"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="MD9-zO-JwB" secondAttribute="trailing" constant="70" id="CIg-OF-5gl"/>
                <constraint firstItem="7Pl-KY-Kuh" firstAttribute="top" secondItem="yop-zN-kwp" secondAttribute="bottom" constant="30" id="CWB-ni-LIR"/>
                <constraint firstItem="MD9-zO-JwB" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="70" id="Ghs-JG-J6k"/>
                <constraint firstItem="7Pl-KY-Kuh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NOL-3G-7jE"/>
            </constraints>
            <point key="canvasLocation" x="130.53435114503816" y="-11.267605633802818"/>
        </view>
    </objects>
    <resources>
        <image name="square.and.arrow.down" catalog="system" width="121" height="128"/>
        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
