...
import AVFoundation
import RxSwift
import RxCocoa

class QRCodeReaderViewController: UIViewController {
    
    @IBOutlet weak var preview: UIView!
    private let viewModel = QRCodeReaderViewModel()
    private let disposeBag = DisposeBag()
    /// カメラの映像
    private lazy var previewLayer: AVCaptureVideoPreviewLayer = {
        let layer = AVCaptureVideoPreviewLayer(session: self.viewModel.session)
            layer.frame = preview.bounds
            layer.videoGravity = .resizeAspectFill
            layer.connection?.videoOrientation = .portrait
            return layer
        }()
    /// アクセス拒否の場合に表示するView
    private lazy var settingsView: SettingsView = {
       let settingsView = SettingsView()
        settingsView.frame = preview.bounds
        return settingsView
    }()
    /// アルバムを表示するボタン
    private lazy var albumButton: UIButton = {
...
