...
        return result
    }
    
    private func createAlert(message: String? = nil) -> UIAlertController {
        let message = message ?? "QRコードをアルバムに保存しました。"
        let alertController = UIAlertController(title: nil, message: message, preferredStyle: .alert)
        let okAction = UIAlertAction(title: "はい", style: .default)
        alertController.addAction(okAction)
        return alertController
    }
    
    private func createSettingsAlert() -> UIAlertController {
        let message = "端末の[設定]>[QRCodeSample]で、アルバムへのアクセスを許可してください。"
        
        let alertController = UIAlertController(title: nil, message: message, preferredStyle: .alert)
        let cancelAction = UIAlertAction(title: "キャンセル", style: .cancel)
        let settingsAction = UIAlertAction(title: "設定", style: .default) { _ in
            // 設定画面へ移動
            if let url = URL(string: UIApplication.openSettingsURLString) {
                if UIApplication.shared.canOpenURL(url) {
                    UIApplication.shared.open(url)
                }
            }
...
