...
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="preview"/>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <accessibility key="accessibilityConfiguration" identifier="qrCodeReaderViewController"/>
            <constraints>
                <constraint firstItem="38y-wo-cBh" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="5pw-pb-e0o"/>
                <constraint firstItem="Za4-bU-CvV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="DnX-vj-Byp"/>
                <constraint firstItem="38y-wo-cBh" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="HyU-Vx-hiw"/>
                <constraint firstItem="38y-wo-cBh" firstAttribute="top" secondItem="Za4-bU-CvV" secondAttribute="bottom" id="d2z-MP-d9F"/>
                <constraint firstItem="Za4-bU-CvV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="i5m-VW-jO2"/>
...
